--- a/index.html
+++ b/index.html
@@ -4,26 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Shopping</title>
+    <title>My Shopping Cart</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <h1>Admin</h1>
-    <button class="btn" id="btnImportProduct">Import Product</button>
-    <ul>
-        <li>
-            <input type="text" id="productName" name="productName" placeholder="Name">
-        </li>
-        <li>
-            <input type="text" id="productPrice" name="productPrice" placeholder="Price">
-        </li>
-        <li>
-            <textarea name="" id="productDetails" cols="30" rows="5"></textarea>
-        </li>
-        <li>
-            <button class="btn" id="btnAddProduct">Add Product</button>
-        </li>
-    </ul>
+    <header>Shopping Cart 🛒</header>
+    <main>
+        <div id="ShoppingCart">
+            <div id="products"></div>
+        </div>
+    </main>
+    <footer>Course by Radical-Coder and You!</footer>
+
     <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
