added tax calculation and other maths

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <main>
         <div id="ShoppingCart">
             <div id="products"></div>
+            <div id="total" class="total"></div>
         </div>
     </main>
-    <footer>Course by Radical-Coder and You!</footer>
+    <footer>Test task by Shafeeque</footer>
 
     <script src="js/main.js" type="text/javascript"></script>
 </body>
